[package]
name = "unbound_ddns"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.8"
regex = "1.11"
subtle = "2.6.1"

[dev-dependencies]
tower = "0.5"
tempfile = "3"
